tests/parser/validinput/parseexternvoc.idp
vocabulary V {
}

vocabulary V2 {
  extern vocabulary V
}

procedure main(){
	return 1
}