tests/parser/invalidinput/parseerror5.idp
vocabulary V{
	type X
	P(X)
	P(X)
}

procedure main(){
	return 1
}
